5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2360/executions/1728_2496.log
== TEST (2019-05-08 19:04:12) 
-- CODE:
num = input(int("qual o numero ? :"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = input(int("qual o numero ? :"))
ValueError: invalid literal for int() with base 10: 'qual o numero ? :'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:04:12) 
-- CODE:
num = input(int("qual o numero ? :"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = input(int("qual o numero ? :"))
ValueError: invalid literal for int() with base 10: 'qual o numero ? :'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:04:18) 
-- CODE:
num = input(int("qual o numero ? :"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = input(int("qual o numero ? :"))
ValueError: invalid literal for int() with base 10: 'qual o numero ? :'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:04:20) 
-- CODE:
num = input(int("qual o numero ? :"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = input(int("qual o numero ? :"))
ValueError: invalid literal for int() with base 10: 'qual o numero ? :'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:04:21) 
-- CODE:
num = input(int("qual o numero ? :"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = input(int("qual o numero ? :"))
ValueError: invalid literal for int() with base 10: 'qual o numero ? :'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:04:38) 
-- CODE:
num = input(int("qual o numero? "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = input(int("qual o numero? "))
ValueError: invalid literal for int() with base 10: 'qual o numero? '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:05:05) 
-- CODE:
num = int(input("qual o numero?  :"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = input(int("qual o numero? "))
ValueError: invalid literal for int() with base 10: 'qual o numero? '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:15:07) 
-- CODE:
num = int(input("qual o numero?  :"))
while (num != (-1))
   if (num%2 == 0):
	   mensagem = "PAR"
   else()	
	   mensagem = "IMPAR"
print(mensagem)

-- ERROR:
File "XXXX", line 2
    while (num != (-1))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:16:01) 
-- CODE:
num = int(input("qual o numero?  :"))
while(num != (-1)):
   if (num%2 == 0):
	   mensagem = "PAR"
   else()	
	   mensagem = "IMPAR"
print(mensagem)

-- ERROR:
File "XXXX", line 5
    else()	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:16:33) 
-- CODE:
num = int(input("qual o numero?  :"))
while(num != (-1)):
   if (num % 2 == 0):
	   mensagem = "PAR"
   else:
	   mensagem = "IMPAR"
print(mensagem)

-- ERROR:
File "XXXX", line 5
    else()	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:17:44) 
-- CODE:
num = int(input("qual o numero?  :"))
while(num != (-1)):
   if (num % 2 == 0):
	   mensagem = "PAR"
   else:
	   mensagem = "IMPAR"
   print(mensagem)
	num= int(input("digite um numero? :"))



-- ERROR:
File "XXXX", line 8
    num= int(input())
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:17:53) 
-- CODE:
num = int(input("qual o numero?  :"))
while(num != (-1)):
   if (num % 2 == 0):
	   mensagem = "PAR"
   else:
	   mensagem = "IMPAR"
   print(mensagem)
	num= int(input("digite um numero? "))



-- ERROR:
File "XXXX", line 8
    num= int(input())
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:18:04) 
-- CODE:
num = int(input("qual o numero?  :"))
while(num != (-1)):
   if (num % 2 == 0):
	   mensagem = "PAR"
   else:
	   mensagem = "IMPAR"
   print(mensagem)
num= int(input("digite um numero? "))



-- OUTPUT:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:18:32) 
-- CODE:
num = int(input("qual o numero?  :"))
while(num != (-1)):
   if (num % 2 == 0):
	   mensagem = "PAR"
   else:
	   mensagem = "IMPAR"
   print(mensagem)
num= int(input("digite um numero? "))



-- OUTPUT:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:21:21) 
-- CODE:
num = int(input("qual o numero?  :"))
while(num != (-1)):
   if (num % 2 == 0):
	   mensagem = "PAR"
   else:
	   mensagem = "IMPAR"
   print(mensagem)
num= int(input("digite um numero? "))



-- OUTPUT:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 10:52:00) 
-- CODE:
num = int(input("qual o numero?  :"))
while(num != (-1)):
   if (num % 2 == 0):
	   mensagem = "PAR"
   else:
	   mensagem = "IMPAR"
   print(mensagem)
num= int(input("digite um numero? "))



-- OUTPUT:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
